[package]
name = "wei-scheduler"
version = "0.1.0"
edition = "2021"
description = "wei scheduler"
documentation = "https://github.com/zuiyue-com/wei-scheduler"
homepage = "https://github.com/zuiyue-com/wei-scheduler"
license = "MIT OR Apache-2.0"

[dependencies]
wei-log = "0.2.10"
wei-run = { path = "../wei-run" }
wei-windows = { path = "../wei-windows" }
wei-single = "0.3.5"

wei-job-scheduler = "1.2.2"